<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">


    <data>
        <variable
            name="CampProfileViewModel"
            type="com.rosa.camp.viewModel.CampViewModel" />

    </data>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="3"
        app:rowCount="20"
        app:orientation="horizontal">



        <androidx.appcompat.widget.AppCompatTextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PersonalInfo"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnSpan="3"
            app:layout_gravity="center_horizontal"

            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_column="1"
            app:layout_row="1"
            style="@style/personalInfo"

            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@={CampProfileViewModel.campName}"
            app:layout_column="0"
            app:layout_gravity="right"
            android:inputType="text"
            app:layout_row="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="2"
            app:layout_columnSpan="3"
            />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="آدرس"
            app:layout_column="1"
            app:layout_row="3"
            style="@style/personalInfo"

            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:lines="1"
            android:text="@={CampProfileViewModel.campAddress}"
            app:layout_column="0"
            app:layout_gravity="right"
            android:inputType="text"
            app:layout_row="3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="3"
            app:srcCompat="@drawable/name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="4"
            app:layout_columnSpan="3"
            />



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="5"
            android:text="@string/tel"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="5"
            style="@style/personalInfo"
            app:layout_gravity="right"
            android:inputType="number"
            android:text="@={CampProfileViewModel.campTell}"
            />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="5"
            app:srcCompat="@drawable/birth" />
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="6"
            app:layout_columnSpan="3"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="توضیحات"
            app:layout_column="1"
            app:layout_row="7"
            style="@style/personalInfo"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="5"
            style="@style/personalInfo"
            app:layout_gravity="right"
            android:inputType="text"
            android:text="@={CampProfileViewModel.campDescription}"
            />
        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_column="0"
            app:layout_row="7"
            app:layout_gravity="right"

            />
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="7"
            app:srcCompat="@drawable/name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="8"
            app:layout_columnSpan="3"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="9"
            android:text="شهر"
            style="@style/personalInfo"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextDate"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            app:layout_column="0"
            app:layout_row="9"
            app:layout_gravity="right"

            android:text="@={CampProfileViewModel.campCity}"
            />
        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="9"
            app:srcCompat="@drawable/birth" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="10"
            app:layout_columnSpan="3"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_column="1"
            app:layout_row="11"
            android:text="قیمت"
            style="@style/personalInfo"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            app:layout_column="0"
            app:layout_row="11"
            app:layout_gravity="right"
            android:inputType="textEmailAddress"
            android:text="@={CampProfileViewModel.campCost}"
            />
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="11"
            app:srcCompat="@drawable/name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="12"
            app:layout_columnSpan="3"
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="پارکینگ"
            app:layout_column="1"
            app:layout_row="13"
            style="@style/personalInfo"
            />

        <RadioButton
            android:id="@+id/radioButtonParking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_column="0"
            app:layout_row="13"
            app:layout_gravity="right"

            />
        <ImageView
            android:id="@+id/imageViewparking"
            android:layout_width="50dp"
            android:layout_height="62dp"
            app:layout_column="2"
            app:layout_row="13"
            app:srcCompat="@drawable/name" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@android:color/darker_gray"
            app:layout_row="14"
            app:layout_columnSpan="3"
            />



        <Button
            app:layout_row="15"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal"
            android:text="@string/save"
            android:onClick="@{(v)-> CampProfileViewModel.onClick(v)}"
            >
        </Button>


    </androidx.gridlayout.widget.GridLayout>


</layout>

